# qrcode-bot

./: .env.example  .gitignore  PLAN.md  PLAN_FRAMES.md  PLAN_LOGO.md  PLAN_TYPES.md  PLAN_UX.md  PLAN_VISUAL.md  README.md  pyproject.toml
src/qrcode_bot/: __main__.py  bot.py  config.py  core.py  donate.py  frames.py  keyboards.py  logo.py  qr_types.py  stats.py  styles.py
tests/: test_core.py
